--- a/Images/Images/Storyboards/FavoriteImages.storyboard
+++ b/Images/Images/Storyboards/FavoriteImages.storyboard
@@ -22,12 +22,24 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="favoriteImageCelIdentifier" id="Tcq-1h-gCs">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="favoriteImageCelIdentifier" rowHeight="320" id="Tcq-1h-gCs" customClass="FavoriteImageTableViewCell" customModule="Images___iOS_Application" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="320"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tcq-1h-gCs" id="atc-k9-8hM">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="319.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nbO-jW-mrB">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="287.5"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="nbO-jW-mrB" secondAttribute="bottom" constant="32" id="NV3-xD-ome"/>
+                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="top" secondItem="atc-k9-8hM" secondAttribute="top" id="Yox-li-gqo"/>
+                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="leading" secondItem="atc-k9-8hM" secondAttribute="leading" id="jcL-Nc-KbX"/>
+                                                <constraint firstAttribute="trailing" secondItem="nbO-jW-mrB" secondAttribute="trailing" id="qT4-uu-As5"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -46,7 +58,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yll-CJ-Hjd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="60" y="-80"/>
+            <point key="canvasLocation" x="60" y="-80.50974512743629"/>
         </scene>
     </scenes>
 </document>
