--- a/Images/Images/Storyboards/FavoriteImages.storyboard
+++ b/Images/Images/Storyboards/FavoriteImages.storyboard
@@ -18,33 +18,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tEO-kM-Pw9">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" separatorInsetReference="fromAutomaticInsets" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tEO-kM-Pw9">
                                 <rect key="frame" x="0.0" y="20" width="375" height="598"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="favoriteImageCelIdentifier" rowHeight="320" id="Tcq-1h-gCs" customClass="FavoriteImageTableViewCell" customModule="Images___iOS_Application" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="320"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="favoriteImageCelIdentifier" id="Tcq-1h-gCs" customClass="FavoriteImageTableViewCell" customModule="Images___iOS_Application" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tcq-1h-gCs" id="atc-k9-8hM">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="319.5"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tcq-1h-gCs" id="atc-k9-8hM">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nbO-jW-mrB">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="287.5"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nbO-jW-mrB">
+                                                    <rect key="frame" x="16" y="16" width="343" height="240"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="240" id="bAI-AA-vU5"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="0Nr-lf-ZeG">
-                                                    <rect key="frame" x="169" y="141.5" width="37" height="37"/>
-                                                    <color key="color" name="alternateSelectedControlTextColor" catalog="System" colorSpace="catalog"/>
+                                                    <rect key="frame" x="169" y="117.5" width="37" height="37"/>
+                                                    <color key="color" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
                                                 </activityIndicatorView>
                                             </subviews>
-                                            <color key="backgroundColor" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="knobColor" catalog="System" colorSpace="catalog"/>
                                             <constraints>
-                                                <constraint firstItem="0Nr-lf-ZeG" firstAttribute="centerY" secondItem="atc-k9-8hM" secondAttribute="centerY" id="9LO-UV-2e6"/>
-                                                <constraint firstAttribute="bottom" secondItem="nbO-jW-mrB" secondAttribute="bottom" constant="32" id="NV3-xD-ome"/>
-                                                <constraint firstItem="0Nr-lf-ZeG" firstAttribute="centerX" secondItem="atc-k9-8hM" secondAttribute="centerX" id="Wf6-J5-qFU"/>
-                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="top" secondItem="atc-k9-8hM" secondAttribute="top" id="Yox-li-gqo"/>
-                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="leading" secondItem="atc-k9-8hM" secondAttribute="leading" id="jcL-Nc-KbX"/>
-                                                <constraint firstAttribute="trailing" secondItem="nbO-jW-mrB" secondAttribute="trailing" id="qT4-uu-As5"/>
+                                                <constraint firstItem="0Nr-lf-ZeG" firstAttribute="centerY" secondItem="nbO-jW-mrB" secondAttribute="centerY" id="9LO-UV-2e6"/>
+                                                <constraint firstAttribute="trailing" secondItem="nbO-jW-mrB" secondAttribute="trailing" constant="16" id="H35-Tg-Q7i"/>
+                                                <constraint firstItem="0Nr-lf-ZeG" firstAttribute="centerX" secondItem="nbO-jW-mrB" secondAttribute="centerX" id="Wf6-J5-qFU"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="nbO-jW-mrB" secondAttribute="bottom" constant="8" id="XfW-hz-AM9"/>
+                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="top" secondItem="atc-k9-8hM" secondAttribute="top" constant="16" id="Yox-li-gqo"/>
+                                                <constraint firstItem="nbO-jW-mrB" firstAttribute="leading" secondItem="atc-k9-8hM" secondAttribute="leading" constant="16" id="jcL-Nc-KbX"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -60,7 +64,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
                         <constraints>
                             <constraint firstItem="tEO-kM-Pw9" firstAttribute="leading" secondItem="bGP-uN-xVs" secondAttribute="leading" id="MZw-a4-TNW"/>
                             <constraint firstItem="tEO-kM-Pw9" firstAttribute="top" secondItem="bGP-uN-xVs" secondAttribute="top" id="SmC-vg-i3S"/>
